# lalrpop-lsp

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
client/: package.json  pnpm-lock.yaml
client/src/: extension.ts
docs/: error-diagnostics.webm  find-references.webm  go-to-definition.webm  hover.webm
src/: main.rs
