[package]
name = "lalrpop-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
# chumsky = "0.8.0"
env_logger = "0.11.5"
# ropey = "1.5.0"
# serde_json = "1.0.78"
tokio = { version = "1.41.1", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
# serde = { version = "1.0", features = ["derive"] }
# dashmap = "5.1.0"
# log = "0.4.14"
# im-rc = "15.0.0"
# lalrpop = { git = "https://github.com/LighghtEeloo/lalrpop.git", branch = "lsp", features = ["lsp"] }
lalrpop = { path = "../../Box/Repo/lalrpop/lalrpop", features = ["lsp"] }
